[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/cenas/Inicio.gd" type="Script" id=1]

[node name="Inicio" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 1 )

[node name="Opcoes" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.5
margin_top = -54.0
margin_right = 69.5
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iniciar" type="Button" parent="Opcoes"]
anchor_right = 1.0
margin_bottom = 20.0
text = "Iniciar"

[node name="Configuracoes" type="Button" parent="Opcoes"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
text = "Configurações"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Button" parent="Opcoes"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
text = "Sair"

[node name="Configuracoes" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -54.0
margin_right = 70.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="Configuracoes"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 10.0
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Opcoes/Iniciar" to="." method="_on_Iniciar_pressed"]
[connection signal="pressed" from="Opcoes/Configuracoes" to="." method="_on_Configuracoes_pressed"]
[connection signal="pressed" from="Opcoes/Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="Configuracoes/Voltar" to="." method="_on_Voltar_pressed"]
